Fixed the Paunang Aralin Panuto layout for smaller screens (removed the extra whitespaces) and changes the image

--- a/css-files/paunangPagsusulit.css
+++ b/css-files/paunangPagsusulit.css
@@ -592,7 +592,7 @@ body {
     }
 
     .intro-content #startQuizBtn {
-        font-size: 1rem;;
+        font-size: 0.8rem;;
     }
 }
 
